--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,9 @@
 name = "rscat"
 version = "0.1.0"
 edition = "2021"
-about = "A rust cat(1) clone"
+description = "A rust cat(1) clone"
+repository = "https://github.com/AjiBuster499/rscat"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
